various spacing edits for new font size / fixed contact link cards / updated editor styles with more frontend style matching

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -8,7 +8,7 @@ small, time, ol, ul, li, button, input {
     line-height: 1.3;
 }
 
-small { font-size: 0.8rem; }
+small { font-size: 0.875rem; }
 
 time {
     display: block;
