--- a/assets/scss/templates/_contact.scss
+++ b/assets/scss/templates/_contact.scss
@@ -19,7 +19,6 @@
 .contact-social-wrapper {
     display: flex;
     justify-content: space-around;
-    align-items: center;
     max-width: 62.5rem;
     margin: 0 auto;
     flex-wrap: wrap;
@@ -53,6 +52,9 @@
             }
         }
 
-
+        // for the connect with us card
+        .social-text {
+            margin-bottom: 0;
+        }
     }
 }
